added changes for validation error service

--- a/src/ESFA.DC.ILR.ValidationErrors.Interfaces/ESFA.DC.ILR.ValidationErrors.Interface.csproj
+++ b/src/ESFA.DC.ILR.ValidationErrors.Interfaces/ESFA.DC.ILR.ValidationErrors.Interface.csproj
@@ -5,4 +5,16 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <CodeAnalysisRuleSet>ESFA.DC.ILR.ValidationErrors.Interface.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CodeAnalysisRuleSet>ESFA.DC.ILR.ValidationErrors.Interface.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta007" />
+  </ItemGroup>
+
 </Project>
