--- a/src/ESFA.DC.ILR.ValidationErrors.Interfaces/ESFA.DC.ILR.ValidationErrors.Interface.csproj
+++ b/src/ESFA.DC.ILR.ValidationErrors.Interfaces/ESFA.DC.ILR.ValidationErrors.Interface.csproj
@@ -14,7 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta007" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
