--- a/src/ESFA.DC.ILR.ValidationErrors/ESFA.DC.ILR.ValidationErrors.csproj
+++ b/src/ESFA.DC.ILR.ValidationErrors/ESFA.DC.ILR.ValidationErrors.csproj
@@ -18,7 +18,9 @@
     <PackageReference Include="ESFA.DC.IO.Interfaces" Version="0.1.2-beta0001" />
     <PackageReference Include="ESFA.DC.Logging" Version="0.1.1-beta0001" />
     <PackageReference Include="ESFA.DC.Serialization.Interfaces" Version="0.1.4-beta0001" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta007" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta007">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
